fix carousel overlapping navbar

--- a/src/Styles/Homepage.scss
+++ b/src/Styles/Homepage.scss
@@ -1,5 +1,6 @@
 .carousel-container {
   padding-bottom: 2rem;
+  z-index: 0;
 }
 
 .homepage-title {
